# Vea

./: LICENSE  README.md
backend/: .gitignore  agent.py  main.py  pyproject.toml
backend/agent/: create.py  vea.py
backend/config/: agent.yaml  logging.conf
backend/models/: chat.py  config.py
backend/tools/: __init__.py  date.py  math.py  vision_llm.py  vision_ocr.py  weather.py
backend/utils/: config.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: chat.ts  ollama.ts
frontend/src/components/: BubbleAnimation.tsx  Chat.tsx  ImageModalPreview.tsx  Message.tsx  NavBar.tsx  QueryImagePreview.tsx  SearchButton.tsx  SubmitButton.tsx  ThinkingSection.tsx  ToggleButton.tsx  UploadButton.tsx
frontend/src/enums/: chat.ts
frontend/src/hooks/: useChatState.ts  useFileReader.ts  useModelConfig.ts  usePaste.ts
frontend/src/pages/: ChatPage.tsx  ConfigurePage.tsx
frontend/src/types/: chat.ts  config.ts
frontend/src/utils/: image.ts
